--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -14,7 +14,7 @@
 }
 
 .lgout-btn {
-  background: orange;
+  background: rgba(255, 166, 0, 0.909);
   font-size: medium;
   padding: 10px;
   margin-right: 20px;
